# mrrc

./: .gitignore  .valgrind.supp  @AGENTS.md  AGENTS.md  BEADS_ACTION_SUMMARY.md  BEADS_UPDATES_SUMMARY.md  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  Cargo.toml  EVALUATION_SUMMARY.md  FLATBUFFERS_EVALUATION.md  FLATBUFFERS_SUMMARY.txt  HANDOFF_mrrc-fks.1_complete.md  HANDOFF_mrrc-fks.1_protobuf.md  LICENSE  MARC8_WORK_SUMMARY.md  MIGRATION_GUIDE.md  PARQUET_IMPLEMENTATION.md  PHASE_H_READINESS_CHECKLIST.md  PLAN_REVIEW_INDEX.md  README.md  README_BEADS_INTEGRATION.md  SECURITY.md  SESSION_COMPLETION_SUMMARY.md  SESSION_HANDOFF.md  build.rs  check_gaps.py  clippy.toml  codecov.yml  context7.json  flatbuffers_evaluation_results.json  generate_eacc_table.py  mkdocs.yml  pyproject.toml  rustfmt.toml  test_truly_parallel.py
.beads/: .gitignore  GIL_RELEASE_WORK_REVIEW.md  config.yaml  issues.jsonl
.benchmarks/: baseline_before_gil_release.txt  benchmark_comparison.json  comparison.json  phase_f_benchmark_report.txt  pymrrc_concurrent_profile.json  pymrrc_profile_output.txt  pymrrc_profile_single_thread.json  pymrrc_single_thread_profile.json
.cargo/: asan_suppressions.txt  audit.toml  check.sh
.claude/: settings.local.json
.githooks/: pre-push
.github/: PULL_REQUEST_TEMPLATE.md  copilot-instructions.md  dependabot.yml  zizmor.yml
benches/: arrow_benchmarks.rs  detailed_profiling.rs  error_handling_benchmarks.rs  eval_avro.rs  eval_cbor.rs  eval_messagepack.rs  flatbuffers_benchmarks.rs  format_benchmarks.rs  marc_benchmarks.rs  messagepack_benchmarks.rs  parallel_benchmarks.rs  parquet_benchmarks.rs  profiling_harness.rs  protobuf_benchmarks.rs  rayon_file_io_profiling.rs  rayon_profiling.rs
design/: AUTHORITY_RECORD_DESIGN.md  FIELD_QUERY_DSL.md  FORMAT_CONVERSION_AUDIT.md  PARALLEL_BENCHMARKING_FEASIBILITY.md  PROJECT_STRUCTURE_AUDIT.md  PYTHON_WRAPPER_DECISIONS.md  PYTHON_WRAPPER_PROPOSAL.md  README.md  RUST_IDIOMATICITY_AUDIT.md  api-refactor-proposal.md
docs/: ARCHITECTURE.md  BENCHMARKING.md  CONCURRENCY.md  FORMAT_SELECTION_GUIDE.md  INSTALLATION_GUIDE.md  MEMORY_SAFETY.md  MIGRATION_GUIDE.md  PERFORMANCE.md  PYTHON_TUTORIAL.md  README.md  RELEASE_PROCEDURE.md  STREAMING_GUIDE.md  THREADING.md  index.md  parallel_processing.md  threading.md
examples/: authority_records.py  authority_records.rs  benchmark_native.rs  bibframe_batch.rs  bibframe_to_marc.rs  concurrent_reading.py  concurrent_reading.rs  concurrent_reading_producer_consumer.py  concurrent_writing.py  concurrent_writing.rs  creating_records.py  creating_records.rs  format_conversion.py  format_conversion.rs  marc8_encoding.py  marc8_encoding.rs  marc_to_bibframe.rs  marc_to_csv.rs  multilingual_records.py  multilingual_records.rs  polars_arrow_eval.rs  rayon_poc.rs  reading_and_querying.py  reading_and_querying.rs  validation_level_perf.rs
fuzz/: .gitignore  Cargo.toml
fuzz/corpus/decode_marc8/: eacc_multibyte
fuzz/corpus/error_classification/: multi_records
fuzz/corpus/parse_bibframe/: simple_book_jsonld  simple_book_ntriples  simple_book_rdfxml  simple_book_turtle
fuzz/corpus/parse_json/: simple_book
fuzz/corpus/parse_marcjson/: simple_book
fuzz/corpus/parse_record/: simple_authority
fuzz/fuzz_targets/: decode_marc8.rs  error_classification.rs  parse_authority.rs  parse_bibframe.rs  parse_holdings.rs  parse_json.rs  parse_lenient.rs  parse_marcjson.rs  parse_marcxml.rs  parse_mods.rs  parse_record.rs  parse_record_from_bytes.rs  recovery_mode_consistency.rs  roundtrip_binary.rs  write_arbitrary_records.rs
history/: README.md
mrrc/: __init__.py  _mrrc.pyi  analytics.py  exceptions.py  rayon_parser_pool.py
proto/: marc.fbs  marc.proto
scripts/: baseline_benchmark.py  bench_read_throughput.py  benchmark_all_modes.py  benchmark_batch_sizes.py  benchmark_comparison.py  benchmark_iso2709.rs  check_error_handling_perf.py  create_fidelity_test.py  criterion_extractor.py  generate_benchmark_fixtures.py  generate_eacc_table.py  generate_error_fixtures.py  generate_realistic_fixture.py  json_to_markdown_tables.py  lint-changelog.sh  lint_process_labels.py  measure_iso2709_baseline.py  measure_iso2709_baseline_rust.rs  memory_profiler.py  parallel_throughput.py  polars_evaluation.py  profile_allocations.py  profile_analysis.py  profile_pymrrc_concurrent.py  profile_pymrrc_single_thread.py  simple_benchmark_all_modes.py  test_gil_release_validation.py  validate_fidelity_test.sh  verify_error_docs.py
src/: arrow_impl.rs  authority_queries.rs  authority_reader.rs  authority_record.rs  authority_writer.rs  bibliographic_helpers.rs  boundary_scanner.rs  csv.rs  dublin_core.rs  encoding.rs  encoding_validation.rs  error.rs  field_access.rs  field_collection.rs  field_linkage.rs  field_query.rs  field_query_helpers.rs  flatbuffers_impl.rs  format_queries.rs  holdings_reader.rs  holdings_record.rs  holdings_writer.rs  iso2709.rs  iso2709_skeleton.rs  json.rs  leader.rs  lib.rs  macros.rs  main.rs  marc8_tables.rs  marc_record.rs  marcjson.rs  marcxml.rs  messagepack.rs  mods.rs  parquet_impl.rs  producer_consumer_pipeline.rs  protobuf.rs  rayon_parser_pool.rs  reader.rs  (+8 more)
src-python/: Cargo.toml  MIGRATION_GUIDE.md  pyproject.toml
src-python/python/mrrc/: __init__.py  __init__.pyi
src-python/src/: authority_readers.rs  backend.rs  batched_reader.rs  batched_unified_reader.rs  bibframe.rs  boundary_scanner_wrapper.rs  buffered_reader.rs  chunked_py_reader.rs  error.rs  formats.rs  holdings_readers.rs  lib.rs  parse_error.rs  producer_consumer_pipeline_wrapper.rs  protobuf.rs  query.rs  rayon_parser_pool_wrapper.rs  reader_helpers.rs  readers.rs  tier2_formats.rs  unified_reader.rs  wrappers.rs  writers.rs
src-python/tests/: test_backend.rs  test_backend_parity.py  test_backend_type_detection.py  test_backend_unit.py  test_h3_sequential_baseline.py  test_h4a_boundary_scanner.py  test_h5_integration.py  test_h_gate_benchmarking.py  test_integration.py  test_parallel_benchmarking.py  test_producer_consumer_pipeline.py  test_rayon_parser_pool.py  test_record_boundary_scanner.py
(+370 files in other folders)
