[workspace]
members = [".", "src-python"]
resolver = "3"

# Single source of truth for fields shared by both crates. The Python
# package version is also derived from here: pyproject.toml declares
# `dynamic = ["version"]` and maturin reads src-python/Cargo.toml,
# which inherits this version.
[workspace.package]
version = "0.8.2"
edition = "2024"
rust-version = "1.88"
authors = ["Daniel Chudnov"]
license = "MIT"
repository = "https://github.com/dchud/mrrc"

# Dependencies used by both crates, declared once so versions and
# features cannot drift between them.
[workspace.dependencies]
serde_json = "1.0"
smallvec = { version = "1.11", features = ["union", "serde"] }

[package]
name = "mrrc"
version.workspace = true
edition.workspace = true
authors.workspace = true
description = "A Rust library for reading, writing, and manipulating MARC bibliographic records in ISO 2709 binary format"
license.workspace = true
repository.workspace = true
homepage = "https://github.com/dchud/mrrc"
documentation = "https://docs.rs/mrrc"
readme = "README.md"
rust-version.workspace = true
keywords = ["marc", "bibliographic", "library", "metadata"]
categories = ["encoding", "parser-implementations"]

# cargo-semver-checks: the iso2709 + iso2709_skeleton modules are
# parse-skeleton plumbing — `pub` for cross-module access, not as
# user extension points. They're now annotated `#[doc(hidden)]` to
# match that reality. Hiding previously-visible items is itself
# flagged as breaking by these two lints; allow them once so the
# transition lands cleanly. Future hidden-item churn won't trip the
# field/arity lints (those skip hidden items by default).
[package.metadata.cargo-semver-checks.lints]
struct_now_doc_hidden = "allow"
trait_now_doc_hidden = "allow"
enum_now_doc_hidden = "allow"
function_now_doc_hidden = "allow"
pub_module_level_const_now_doc_hidden = "allow"
# Per-record diagnostics: a new public `errors` field on Record /
# AuthorityRecord / HoldingsRecord, plus a `&mut Vec<MarcError>`
# parameter threaded through `recovery::try_recover_record`. Both are
# intentional public API additions for the 0.8.x line. Adding `errors`
# also drops UnwindSafe / RefUnwindSafe on RecordBuilder transitively
# (MarcError carries non-UnwindSafe boxed-cause variants). Pre-1.0;
# no v0.8.x BC weighting in the design.
auto_trait_impl_removed = "allow"
constructible_struct_adds_field = "allow"
function_parameter_count_changed = "allow"

[features]
default = ["bibframe"]
# BIBFRAME linked-data conversion (the `bibframe` module). On by default;
# build with --no-default-features to drop the oxrdf/oxrdfio dependency tree.
bibframe = ["dep:oxrdf", "dep:oxrdfio"]

[dependencies]
# Core parsing and data handling
memchr = "2.7"

# Encoding support
unicode-normalization = "0.1"

# Serialization formats
serde = { version = "1.0", features = ["derive"] }
serde_json = { workspace = true }
quick-xml = { version = "0.40", features = ["serialize"] }

# Ordered map for insertion order preservation
indexmap = { version = "2.2", features = ["serde"] }

# Error handling
thiserror = "2.0"

# Pattern matching
regex = "1.10"

# Inline small-vector storage for field/subfield collections
smallvec = { workspace = true }

# Parallelism
rayon = "1.7"
crossbeam-channel = "0.5"

# RDF serialization for BIBFRAME support (the `bibframe` feature)
oxrdfio = { version = "0.2", optional = true }
oxrdf = { version = "0.3", optional = true }

[dev-dependencies]
proptest = "1.0"
criterion = { version = "4.3.0", package = "codspeed-criterion-compat", features = ["html_reports"] }
rayon = "1.7"
tempfile = "3.8"
insta = "1"
toml = "1.1"
# Used by examples only (examples resolve against dev-dependencies)
anyhow = "1.0"
flate2 = "1.0"

# Lint configuration following Rust API Guidelines
[lints.rust]
unsafe_code = "deny"
missing_docs = "warn"
missing_debug_implementations = "warn"

[lints.clippy]
all = { level = "warn", priority = -1 }
pedantic = { level = "warn", priority = -1 }
# Restrict to reasonable cognitive complexity
cognitive_complexity = "warn"
# Allow module name in error messages
module_name_repetitions = "allow"
# Allow similar names in tests
similar_names = "allow"
# Type complexity is managed separately
type_complexity = "allow"

# Targets that exercise the BIBFRAME module are skipped when the
# `bibframe` feature is off (e.g. the --no-default-features check).
[[example]]
name = "marc_to_bibframe"
required-features = ["bibframe"]

[[example]]
name = "bibframe_to_marc"
required-features = ["bibframe"]

[[example]]
name = "bibframe_batch"
required-features = ["bibframe"]

[[test]]
name = "bibframe_unit_tests"
required-features = ["bibframe"]

[[test]]
name = "bibframe_integration_tests"
required-features = ["bibframe"]

[[test]]
name = "bibframe_validation_tests"
required-features = ["bibframe"]

[[test]]
name = "bibframe_roundtrip_tests"
required-features = ["bibframe"]

[[test]]
name = "bibframe_baseline_comparison"
required-features = ["bibframe"]

[[bench]]
name = "marc_benchmarks"
harness = false

[[bench]]
name = "error_handling_benchmarks"
harness = false

[[bench]]
name = "parallel_benchmarks"
harness = false

[[bench]]
name = "format_benchmarks"
harness = false

# Release profile for a performance-marketed PyO3 extension: LTO and a
# single codegen unit make cross-crate inlining deterministic (no more
# codegen-unit-partitioning lottery in instruction-count benchmarks) and
# faster; strip debuginfo from shipped wheels.
[profile.release]
opt-level = 3
lto = "fat"
codegen-units = 1
strip = "debuginfo"

# Inherits release (lto, codegen-units) so CodSpeed measures the same
# codegen the wheels ship; keep debuginfo for profiling work.
[profile.bench]
debug = true
strip = "none"
