[workspace]
members = [".", "src-python"]
resolver = "3"

[package]
name = "mrrc"
version = "0.8.2"
edition = "2024"
authors = ["Daniel Chudnov"]
description = "A Rust library for reading, writing, and manipulating MARC bibliographic records in ISO 2709 binary format"
license = "MIT"
repository = "https://github.com/dchud/mrrc"
homepage = "https://github.com/dchud/mrrc"
documentation = "https://docs.rs/mrrc"
readme = "README.md"
rust-version = "1.88"
keywords = ["marc", "bibliographic", "library", "metadata"]
categories = ["encoding", "parser-implementations"]

# cargo-semver-checks: the iso2709 + iso2709_skeleton modules are
# parse-skeleton plumbing — `pub` for cross-module access, not as
# user extension points. They're now annotated `#[doc(hidden)]` to
# match that reality. Hiding previously-visible items is itself
# flagged as breaking by these two lints; allow them once so the
# transition lands cleanly. Future hidden-item churn won't trip the
# field/arity lints (those skip hidden items by default).
[package.metadata.cargo-semver-checks.lints]
struct_now_doc_hidden = "allow"
trait_now_doc_hidden = "allow"
enum_now_doc_hidden = "allow"
function_now_doc_hidden = "allow"
pub_module_level_const_now_doc_hidden = "allow"
# Per-record diagnostics: a new public `errors` field on Record /
# AuthorityRecord / HoldingsRecord, plus a `&mut Vec<MarcError>`
# parameter threaded through `recovery::try_recover_record`. Both are
# intentional public API additions for the 0.8.x line. Adding `errors`
# also drops UnwindSafe / RefUnwindSafe on RecordBuilder transitively
# (MarcError carries non-UnwindSafe boxed-cause variants). Pre-1.0;
# no v0.8.x BC weighting in the design.
auto_trait_impl_removed = "allow"
constructible_struct_adds_field = "allow"
function_parameter_count_changed = "allow"

[features]
default = []

[dependencies]
# Core parsing and data handling
memchr = "2.7"

# Encoding support
unicode-normalization = "0.1"

# Serialization formats
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
quick-xml = { version = "0.40", features = ["serialize"] }

# Ordered map for insertion order preservation
indexmap = { version = "2.2", features = ["serde"] }

# Error handling
thiserror = "2.0"

# Pattern matching
regex = "1.10"

# Inline small-vector storage for field/subfield collections
smallvec = { version = "1.11", features = ["union", "serde"] }

# Parallelism
rayon = "1.7"
crossbeam-channel = "0.5"

# RDF serialization for BIBFRAME support
oxrdfio = "0.2"
oxrdf = "0.3"

[dev-dependencies]
proptest = "1.0"
criterion = { version = "4.3.0", package = "codspeed-criterion-compat", features = ["html_reports"] }
rayon = "1.7"
tempfile = "3.8"
insta = "1"
toml = "1.1"
# Used by examples only (examples resolve against dev-dependencies)
anyhow = "1.0"
flate2 = "1.0"

# Lint configuration following Rust API Guidelines
[lints.rust]
unsafe_code = "deny"
missing_docs = "warn"
missing_debug_implementations = "warn"

[lints.clippy]
all = { level = "warn", priority = -1 }
pedantic = { level = "warn", priority = -1 }
# Restrict to reasonable cognitive complexity
cognitive_complexity = "warn"
# Allow module name in error messages
module_name_repetitions = "allow"
# Allow similar names in tests
similar_names = "allow"
# Type complexity is managed separately
type_complexity = "allow"

[[bench]]
name = "marc_benchmarks"
harness = false

[[bench]]
name = "error_handling_benchmarks"
harness = false

[[bench]]
name = "parallel_benchmarks"
harness = false

# Release profile for a performance-marketed PyO3 extension: LTO and a
# single codegen unit make cross-crate inlining deterministic (no more
# codegen-unit-partitioning lottery in instruction-count benchmarks) and
# faster; strip debuginfo from shipped wheels.
[profile.release]
opt-level = 3
lto = "fat"
codegen-units = 1
strip = "debuginfo"

# Inherits release (lto, codegen-units) so CodSpeed measures the same
# codegen the wheels ship; keep debuginfo for profiling work.
[profile.bench]
debug = true
strip = "none"
