[build-system]
requires = ["maturin>=1.0,<2.0"]
build-backend = "maturin"

[project]
name = "mrrc"
version = "0.8.2"
description = "MRRC: A fast MARC library written in Rust with Python bindings"
readme = "README.md"
license = {text = "MIT"}
authors = [
    {name = "MRRC Contributors", email = "contact@example.com"}
]
requires-python = ">=3.10"
keywords = ["marc", "bibliographic", "data", "rust"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
    "Topic :: Software Development :: Libraries",
]

[project.optional-dependencies]
# Runtime test dependencies — used by the wheel-test CI workflows via
# `mrrc[test]` so the dep list has a single source of truth and any future
# test dep added here is automatically picked up by CI.
test = [
    "pytest>=7.0",
    "pytest-benchmark>=4.0",
    "syrupy>=4.0",
    # tomllib is stdlib on 3.11+; tomli is the upstream backport for 3.10.
    # The error-coverage harness reads tests/error_coverage.toml at import
    # time and falls back to tomli when running under Python 3.10.
    "tomli>=2.0; python_version < '3.11'",
]
# Developer tooling (linters, type checkers) on top of the test deps.
# Self-references `mrrc[test]` so the test deps stay listed in exactly one
# place above; pip and uv both resolve self-referential extras correctly.
dev = [
    "mrrc[test]",
    "maturin>=1.0,<2.0",
    "mypy>=1.0",
    "pyright>=1.1",
    "ruff>=0.1",
]
benchmark = [
    "pytest>=7.0",
    "pytest-benchmark>=4.0",
    "tomli>=2.0; python_version < '3.11'",
]
docs = [
    "mkdocs-material>=9.0",
    "mkdocstrings[python]>=0.24",
    "pymdown-extensions>=10.0",
]
# pymarc is the oracle the parity tests compare against. Managed as an
# extra so the version is locked in uv.lock and Dependabot bumps it on
# the normal cadence: a pymarc release that changes behavior fails the
# oracle on the bump PR, where the divergence gets adjudicated (adopt
# the new behavior or document the deliberate divergence) instead of
# being discovered by users.
oracle = [
    "pymarc>=5.3",
]

[tool.maturin]
python-packages = ["mrrc"]
module-name = "mrrc._mrrc"
manifest-path = "src-python/Cargo.toml"

[tool.pytest.ini_options]
testpaths = ["tests/python"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
markers = [
    "benchmark: mark test as a benchmark (deselect with '-m \"not benchmark\"')",
    "slow: mark test as slow running (deselect with '-m \"not slow\"')",
]
# Note: benchmark addopts moved to explicit --benchmark-* flags when running benchmarks
# Default runs skip benchmarks for fast feedback

[tool.mypy]
python_version = "3.10"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = false
strict = false

[tool.pyright]
pythonVersion = "3.10"
typeCheckingMode = "basic"
