[package]
name = "mrrc-fuzz"
version = "0.0.0"
publish = false
edition = "2021"
rust-version = "1.88"

[package.metadata]
cargo-fuzz = true

[dependencies]
libfuzzer-sys = "0.4"
# Used by write_arbitrary_records to build arbitrary Record values directly
# from fuzz input (Unstructured). Fuzz-workspace-only — not a dependency of
# the mrrc crate.
arbitrary = "1"
# The JSON readers take a parsed `serde_json::Value`, so the parse_json and
# parse_marcjson targets parse the raw fuzz bytes into a Value before
# handing off to mrrc. serde_json is not re-exported from the crate root,
# so the fuzz workspace declares it directly.
serde_json = "1.0"

[dependencies.mrrc]
path = ".."

# Standalone workspace root. Keeps fuzz/ from being absorbed into the outer
# workspace, so the root (stable 1.95.0) toolchain does not try to build it.
[workspace]

[profile.release]
debug = 1

[[bin]]
name = "parse_record"
path = "fuzz_targets/parse_record.rs"
test = false
doc = false
bench = false

[[bin]]
name = "parse_record_from_bytes"
path = "fuzz_targets/parse_record_from_bytes.rs"
test = false
doc = false
bench = false

[[bin]]
name = "roundtrip_binary"
path = "fuzz_targets/roundtrip_binary.rs"
test = false
doc = false
bench = false

[[bin]]
name = "write_arbitrary_records"
path = "fuzz_targets/write_arbitrary_records.rs"
test = false
doc = false
bench = false

[[bin]]
name = "error_classification"
path = "fuzz_targets/error_classification.rs"
test = false
doc = false
bench = false

[[bin]]
name = "recovery_mode_consistency"
path = "fuzz_targets/recovery_mode_consistency.rs"
test = false
doc = false
bench = false

[[bin]]
name = "parse_json"
path = "fuzz_targets/parse_json.rs"
test = false
doc = false
bench = false

[[bin]]
name = "parse_marcjson"
path = "fuzz_targets/parse_marcjson.rs"
test = false
doc = false
bench = false

[[bin]]
name = "parse_marcxml"
path = "fuzz_targets/parse_marcxml.rs"
test = false
doc = false
bench = false

[[bin]]
name = "parse_mods"
path = "fuzz_targets/parse_mods.rs"
test = false
doc = false
bench = false

[[bin]]
name = "decode_marc8"
path = "fuzz_targets/decode_marc8.rs"
test = false
doc = false
bench = false

[[bin]]
name = "parse_authority"
path = "fuzz_targets/parse_authority.rs"
test = false
doc = false
bench = false

[[bin]]
name = "parse_holdings"
path = "fuzz_targets/parse_holdings.rs"
test = false
doc = false
bench = false

[[bin]]
name = "parse_bibframe"
path = "fuzz_targets/parse_bibframe.rs"
test = false
doc = false
bench = false

[[bin]]
name = "parse_lenient"
path = "fuzz_targets/parse_lenient.rs"
test = false
doc = false
bench = false
