[package]
name = "mrrc-python"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
authors.workspace = true
description = "PyO3 bindings for the mrrc MARC library"
license.workspace = true
repository.workspace = true

[dependencies]
pyo3 = { version = "0.29", features = ["extension-module"] }
mrrc = { path = ".." }
serde_json = { workspace = true }
# SmallVec for buffered reader: we own the bytes here to safely cross the GIL boundary.
# Typical MARC records (100B-5KB) fit in 4KB inline buffer without allocation.
# Larger records automatically spill to heap. ~85-90% of real-world records avoid allocation.
smallvec = { workspace = true }

[lib]
name = "_mrrc"
crate-type = ["cdylib"]
