[build-system]
requires = ["maturin>=1.7,<2.0"]
build-backend = "maturin"

[project]
name = "mrrc"
version = "0.1.0"
description = "Fast MARC library for reading, writing, and manipulating bibliographic records"
readme = "../README.md"
requires-python = ">=3.8"
license = { text = "MIT" }
authors = [
    { name = "MARC Rust Community" }
]
keywords = ["marc", "bibliographic", "library", "metadata"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development :: Libraries :: Python Modules",
]
dependencies = []

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "pytest-cov>=4.0",
]

[tool.maturin]
module-name = "mrrc._mrrc"
bindings = "pyo3"
python-source = "python"
include = [
    { path = "python/mrrc/py.typed", format = "sdist" },
]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py", "*_test.py"]
